src/test/deca/context/invalid/decl_class_super_not_defined.deca
// Test de la règle (1.3) : Si l'on essaie de déclarer une
// classe fille d'une classe mère inexistante, on a une
// erreur de contexte

class Voiture extends Vehicule {}

// Output :
//#

